Camino only - bug 294882: Trigger onfocus for selects before showing the menu, not after. r/sr=pink